--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "talk-home-uploader",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "postinstall": "npx playwright install --with-deps chromium",
     "start": "node server.js"
