--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "talk-home-uploader",
+  "name": "mixtv-link-bot",
   "version": "1.0.0",
   "type": "module",
   "engines": { "node": "20.x", "npm": "10.x" },
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx playwright install chromium"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "axios": "^1.7.2",
-    "@playwright/test": "^1.46.0"
+    "express": "^4.19.2"
   }
 }
